@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.33 2012/10/08 23:01:19 adam Exp $
+# $NetBSD: Makefile,v 1.34 2012/10/09 01:36:31 jnemeth Exp $
 #
 # NOTE: when updating this package, there are two places that sound
 #       tarballs need to be checked
 
-DISTNAME=	asterisk-10.9.0
+DISTNAME=	asterisk-10.10.0
 DIST_SUBDIR=	${PKGNAME_NOREV}
 DISTFILES=	${DEFAULT_DISTFILES}
 EXTRACT_ONLY=	${DISTNAME}.tar.gz
