@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.68 2012/11/01 14:04:58 mlelstv Exp $
+# $NetBSD: Makefile,v 1.69 2012/11/07 19:22:04 he Exp $
 
 DISTNAME=	gnuplot-4.6.1
+PKGREVISION=	1
 CATEGORIES+=	graphics
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gnuplot/}
 
